gce_2ravens/rendered/gce_demo_ingress_2020_1202.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 20.62.247.249
    http:
      paths:
        - path: /tr
          backend:
            serviceName: tworavens-service-demo
            servicePort: 8010
---
# -------------------------------------
#   TA3 Service
#   https://2ravens.org
#   template: gce_ravens_demo-01-noTA2.yaml
# -------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: tworavens-service-demo
  labels:
    app: ta3-demo
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: monitoring-raven
spec:
  #type: LoadBalancer
  #loadBalancerIP: 20.62.247.249
  #  loadBalancerIP: 104.197.235.238  # 2ravens.org
  selector:
    app: ta3-demo
  ports:
    - name: http
      port: 8010
      protocol: TCP
      targetPort: 80
---
# -------------------------------------
#   TA3 Pod
# -------------------------------------
apiVersion: v1
kind: Pod
metadata:
  name: tworavensweb-demo
  labels:
    app: ta3-demo
spec:
  restartPolicy: Never
  containers:
  # -------------------------
  # 1 of 7: Ravens postgres
  # -------------------------
  - name: ravens-postgres
    image: postgres:12
    imagePullPolicy: Always
    # -----------------------------------
    # postgres_resources
    # ----------------------------------
    resources:
      requests:
         memory: "500Mi"
         cpu: "500m"
      limits:
         memory: "1000Mi"
         cpu: "500m"
  - name: ravens-nginx
    image: tworavens/ravens-nginx:comfrey-2020-1202
    imagePullPolicy: Always
    # -----------------------------------
    # nginx_resources
    # ----------------------------------
    resources:
      requests:
         memory: "256Mi"
         cpu: "500m"
      limits:
         memory: "500Mi"
         cpu: "500m"
    ports:
      - containerPort: 80
        name: http
        protocol: TCP
    volumeMounts:
      # ----------------------------------
      # shared between containers
      # ref: dm_volume_mounts_01.yaml
      # ----------------------------------
      - name: ravens-volume
        mountPath: /ravens_volume
        subPath: 2ravens_org-demo
        readOnly: false
      # ----------------------------------
  # -------------------------
  # 3 of 7: redis
  # -------------------------
  - name: redis
    image: redis:4.0
    # -----------------------------------
    # redis_resources
    # ----------------------------------
    resources:
      requests:
         memory: "500Mi"
         cpu: "500m"
      limits:
         memory: "500Mi"
         cpu: "500m"
    ports:
    - containerPort: 6379
    volumeMounts:
      # "backdoor": For viewing outer directories
      - name: ravens-volume
        mountPath: /ravens_volume
        readOnly: false
  # -------------------------
  # 4 of 7: TA3 main (web app)
  # -------------------------
  - name: ta3-main
    image: tworavens/ravens-main:comfrey-2020-1202
    #image: tworavens/ravens-main:develop
    imagePullPolicy: Always
    command: ["d3m_start_multiuser.sh"]
    # -----------------------------------
    # ta3_resources
    # ----------------------------------
    resources:
      requests:
         memory: "1000Mi"
         cpu: "1000m"
      limits:
         memory: "2000Mi"
         cpu: "1000m"
    ports:
      - containerPort: 8080
        name: http
        protocol: TCP
    volumeMounts:
      # ----------------------------------
      # shared between containers
      # ref: dm_volume_mounts_01.yaml
      # ----------------------------------
      - name: ravens-volume
        mountPath: /ravens_volume
        subPath: 2ravens_org-demo
        readOnly: false
      # ----------------------------------
  - name: celery-worker
    image: tworavens/ravens-main:comfrey-2020-1202
    imagePullPolicy: Always
    command: ['celery', '-A', 'tworavensproject', 'worker', '-l', 'info']
    # command: ['celery', '-A', 'tworavensproject', 'worker', '--concurrency=7', '-l', 'info']
    # -----------------------------------
    # celery_resources
    # ----------------------------------
    resources:
      requests:
         memory: "4500Mi"
         cpu: "1000m"
      limits:
         memory: "6000Mi"
         cpu: "1500m"
    ports:
      - containerPort: 8080
        name: http
        protocol: TCP
    volumeMounts:
      # ----------------------------------
      # shared between containers
      # ref: dm_volume_mounts_01.yaml
      # ----------------------------------
      - name: ravens-volume
        mountPath: /ravens_volume
        subPath: 2ravens_org-demo
        readOnly: false
      # ----------------------------------
    # ---------------------------------
    # environment variables passed to container
    # ---------------------------------
  - name: mongo-2ravens
    image: mongo
    # -----------------------------------
    # mongo_resources
    # ----------------------------------
    resources:
      requests:
         memory: "1000Mi"
         cpu: "500m"
      limits:
         memory: "1000Mi"
         cpu: "1000m"
    ports:
      - containerPort: 27017
        protocol: TCP
    volumeMounts:
      # ----------------------------------
      # shared between containers
      # ref: dm_volume_mounts_01.yaml
      # ----------------------------------
      - name: ravens-volume
        mountPath: /ravens_volume
        subPath: 2ravens_org-demo
        readOnly: false
      # ----------------------------------
  # -------------------------
  # 7 of 7: rook
  # -------------------------
  - name: rook-service
    image: tworavens/ravens-r-service:comfrey-2020-1202
    imagePullPolicy: Always
    # -----------------------------------
    # rook_resources
    # ----------------------------------
    resources:
      requests:
         memory: "1000Mi"
         cpu: "800m"
      limits:
         memory: "1000Mi"
         cpu: "800m"
    volumeMounts:
      # ----------------------------------
      # shared between containers
      # ref: dm_volume_mounts_01.yaml
      # ----------------------------------
      - name: ravens-volume
        mountPath: /ravens_volume
        subPath: 2ravens_org-demo
        readOnly: false
      # ----------------------------------
    ports:
      - containerPort: 8000
        name: http
        protocol: TCP
  volumes:
    - name: ravens-volume
      #persistentVolumeClaim:
      #  claimName: raven-pvc-1
      #  readOnly: false
      emptyDir: {}
    # ----------------------------
    # Volumes for jump server data
    # ----------------------------
    #- name: input-data
    #  emptyDir: {}
    #  #hostPath:
    #    #path:
    #    #type: Directory
    #- name: static-data
    #  emptyDir: {}
    #  #hostPath:
    #    #path:
    #    #type: Directory
    #- name: output-data
    #  emptyDir: {}
---
